--- a/src/main/resources/templates/loginPage.html
+++ b/src/main/resources/templates/loginPage.html
@@ -30,6 +30,12 @@
 
 
     <form th:action="@{/goLogin}" method="post">
+
+        <input
+                type="hidden"
+                th:name="${_csrf.parameterName}"
+                th:value="${_csrf.token}" />
+
         <div class="form-group offset-4">
             <label class="h6" for="username" th:text="#{email} + ':'"> Email: </label>
             <input id="username" class="form-control col-sm-4" th:placeholder="#{email}" type="email" name="username"/>
